--- a/XamarinSmrdi/XamarinSmrdi.UWP/project.json
+++ b/XamarinSmrdi/XamarinSmrdi.UWP/project.json
@@ -1,10 +1,12 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
+    "Xam.Plugin.Contacts": "2.2.0.37-beta",
+    "Xam.Plugins.Forms.ImageCircle": "1.8.1",
     "Xamarin.Forms": "2.4.0.280"
   },
   "frameworks": {
-    "uap10.0": {}
+    "uap10.0.10586": {}
   },
   "runtimes": {
     "win10-arm": {},
