--- a/XamarinSmrdi/XamarinSmrdi.Android/packages.config
+++ b/XamarinSmrdi/XamarinSmrdi.Android/packages.config
@@ -4,6 +4,7 @@
   <package id="Plugin.Permissions" version="1.2.1" targetFramework="monoandroid71" />
   <package id="Xam.Plugin.Contacts" version="2.2.0.37-beta" targetFramework="monoandroid71" />
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.1" targetFramework="monoandroid71" />
+  <package id="Xam.Plugins.Messaging" version="5.0.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
